Fix first column clipped if fixed/static width

--- a/scss/components/_item-tree.scss
+++ b/scss/components/_item-tree.scss
@@ -151,7 +151,6 @@
 		}
 		
 		.cell.hasAttachment {
-			box-sizing: content-box;
 			// Don't show ellipsis
 			text-overflow: unset;
 			
